@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Correctly display changes due to 'bless' spell. Add spell expiry.
+Nicolas Weeger 2011-08-04
+
 Implement "blessed 1" for TREASURE items: such items never create bad or
 cursed items (GT_ONLY_GOOD).
 Andreas Kirschbaum 2011-08-04
